objects/JunoDoc__Juno_Doc_Trigger_Condition__c/JunoDoc__Juno_Doc_Trigger_Condition__c.object-meta.xml
<CustomObject>
    <label>Juno Doc Trigger Condition</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Juno Doc Trigger Conditions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Juno Doc Trigger Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>