objects/JunoDoc__Juno_Doc_Trigger_Condition__c/fields/JunoDoc__Operator__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Operator__c</fullName>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>