objects/JunoDoc__Juno_Doc_Trigger_Condition__c/fields/JunoDoc__RowNumber__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__RowNumber__c</fullName>
    <label>RowNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>